# mlops-project

./: .gitignore  README.md  docker-compose.yml  front.py  pyproject.toml  server.py  utils.py
.github/workflows/: build_docker.yml
backend/: Dockerfile  requirements.txt  server.py  utils.py
backend/models/: model.pt  onnx_model.onnx
front/: Dockerfile  README.md  front.py  requirements.txt
training/: training.ipynb
